--- a/output_2.yaml
+++ b/output_2.yaml
@@ -8,9 +8,9 @@ object_list:
       y: 0.0
       z: 0.0
     position:
-      x: 0.5721270442008972
-      y: -0.2483142912387848
-      z: 0.7050341963768005
+      x: 0.5712485909461975
+      y: -0.2478954792022705
+      z: 0.7054320573806763
   place_pose:
     orientation:
       w: 0.0
@@ -31,9 +31,9 @@ object_list:
       y: 0.0
       z: 0.0
     position:
-      x: 0.5612208843231201
-      y: 0.003559722099453211
-      z: 0.6747649312019348
+      x: 0.5601434707641602
+      y: 0.003147885436192155
+      z: 0.6766631007194519
   place_pose:
     orientation:
       w: 0.0
@@ -46,6 +46,29 @@ object_list:
       z: 0.605
   test_scene_num: 2
 - arm_name: left
+  object_name: book
+  pick_pose:
+    orientation:
+      w: 0.0
+      x: 0.0
+      y: 0.0
+      z: 0.0
+    position:
+      x: 0.5789046883583069
+      y: 0.280473917722702
+      z: 0.7228950262069702
+  place_pose:
+    orientation:
+      w: 0.0
+      x: 0.0
+      y: 0.0
+      z: 0.0
+    position:
+      x: 0
+      y: 0.71
+      z: 0.605
+  test_scene_num: 2
+- arm_name: left
   object_name: soap2
   pick_pose:
     orientation:
@@ -54,9 +77,9 @@ object_list:
       y: 0.0
       z: 0.0
     position:
-      x: 0.44436946511268616
-      y: 0.22782032191753387
-      z: 0.6766523718833923
+      x: 0.44437068700790405
+      y: 0.22667980194091797
+      z: 0.6764086484909058
   place_pose:
     orientation:
       w: 0.0
@@ -77,9 +100,9 @@ object_list:
       y: 0.0
       z: 0.0
     position:
-      x: 0.6312219500541687
-      y: 0.1304948478937149
-      z: 0.6783496737480164
+      x: 0.6309707760810852
+      y: 0.13058094680309296
+      z: 0.6787865161895752
   place_pose:
     orientation:
       w: 0.0
